:hammer: Add jwt filter